# Tenuto-Studio-3

./: .env.example  .gitattributes  .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TENUTO_SPEC.md  Tenuto_3 Deep Dive into Why it's important.m4a  advice_to_co_architect_v1.tela  audio.test.ts  bezier.test.ts  centroid_v1.4.0.tela  centroid_v1.6.0.tela  check.sh  check_wasm.sh  cleanup.js  concrete.test.ts  demo.html  fix_ast.js  fix_env.cjs  fix_physics.js  fix_semantics_034.js  fix_svg.ts  fix_visuals.js  index.html  layout.test.ts  lsp.test.ts  metadata.json  musicxml.test.ts  package-lock.json  package.json  sidechain.test.ts  sprint_tenuto_remaining.tela  tenuto_3_gold_master.tela  test-analyzer.ts  test-lexer.ts  test.tenuto  (+14 more)
frontend/: tenuto-element.js
infra/: decompile.ts  indexer.ts  query.ts  setup-parsers.cjs
public/: render-worker.js  sounds.json  test.tenuto  worker.js
src/: App.tsx  main.tsx  (+3 more)
tenutoc/: Cargo.toml
tenutoc/src/: assets.rs  ast.rs  concrete.rs  cursor.rs  decompile.rs  emitter.rs  engrave.rs  euclidean.rs  ir.rs  lexer.rs  lib.rs  midi.rs  parser.rs  preprocessor.rs  rebar.rs  sidechain.rs  spelling.rs  test_parser.rs  xml.rs
tenutoc/src/compiler/: embedder.rs
tenutoc/src/domains/tenuto/: manifest.rs
tenutoc/src/engrave/: kurbo.rs  layout.rs  mod.rs  skyline.rs  smufl.rs  svg.rs
tenutoc/src/export/: musicxml.rs
tenutoc/tests/: integration.rs  lex_test.rs  xml_spelling_integration.rs
tenutod/: Cargo.toml
tenutod/src/: link_sync.rs  main.rs  osc_emitter.rs  scheduler.rs
(+75 files in other folders)
