[package]
name = "tenutoc"
version = "3.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
logos = "0.13"
chumsky = "0.9"
midly = "0.5"
cassowary = "0.3"
kurbo = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4"
